tests/diagnostics/expressions/match/duplicate_pattern/expect.txt
# exit: 1
input/main.lang0:7:9: error: duplicate match arm for type 'int64'
          int64 => 2
          ^
